--- a/src/main/webapp/resources/css/match.css
+++ b/src/main/webapp/resources/css/match.css
@@ -31,20 +31,20 @@
 }
 .button-word:hover:not(:disabled) {
     background-color: #d0d0d0;
-    transform: translateY(-2px);
+    
 }
 .button-word:active:not(:disabled) {
     transform: translateY(0);
 }
 .button-word:disabled {
-    background-color: #cccccc;
+    background-color: #cccccc !important;
     color: #888888;
     cursor: not-allowed;
     opacity: 0.7;
 }
 .selected {
     background-color: #81C784 !important; /* Verde claro para la selección */
-    color: white;
+    color: white !important;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 .message {
