--- a/src/main/webapp/resources/css/read-answer.css
+++ b/src/main/webapp/resources/css/read-answer.css
@@ -22,15 +22,13 @@
 }
 
 .sentence-display {
-    background-color: #f0f4c3; /* Light yellow background for sentence */
-    padding: 25px;
+    padding:0  25px 0 0;
     border-radius: 10px;
     margin-bottom: 35px;
     font-size: 1.4em;
     line-height: 1.6;
     color: #424242;
     text-align: left;
-    box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.05);
 }
 .highlight {
     font-weight: bold;
